// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewRunParameters clicking the open editor button for json parameters displays an editor 1`] = `
<Editor
  cursorStart={1}
  editorProps={Object {}}
  enableBasicAutocompletion={false}
  enableLiveAutocompletion={false}
  enableSnippets={false}
  focus={false}
  fontSize={12}
  height="500px"
  highlightActiveLine={true}
  maxLines={20}
  minLines={3}
  mode="json"
  name="brace-editor"
  navigateToFileEnd={true}
  onChange={[Function]}
  onLoad={null}
  onPaste={null}
  onScroll={null}
  placeholder={null}
  readOnly={false}
  scrollMargin={
    Array [
      0,
      0,
      0,
      0,
    ]
  }
  setOptions={Object {}}
  showGutter={true}
  showPrintMargin={true}
  style={Object {}}
  tabSize={4}
  theme="github"
  value="{\\"test\\":\\"value\\"}"
  width="100%"
  wrapEnabled={false}
>
  <div
    id="brace-editor"
    style={
      Object {
        "height": "500px",
        "width": "100%",
      }
    }
  />
</Editor>
`;

exports[`NewRunParameters does not display any text fields if there are no parameters 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="header"
        >
          Run parameters
        </div>
        <div>
          This pipeline has no parameters
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="header"
      >
        Run parameters
      </div>
      <div>
        This pipeline has no parameters
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NewRunParameters shows parameters 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="header"
        >
          Run parameters
        </div>
        <div>
          Specify parameters required by the pipeline
        </div>
        <div>
          <div
            class="MuiFormControl-root-1 textField textfield"
          >
            <label
              class="MuiFormLabel-root-16 MuiFormLabel-filled-20 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13 MuiInputLabel-shrink-12 MuiInputLabel-outlined-15"
              data-shrink="true"
              for="newRunPipelineParam0"
            >
              testParam
            </label>
            <div
              class="MuiInputBase-root-36 MuiOutlinedInput-root-23 MuiInputBase-formControl-37"
            >
              <fieldset
                aria-hidden="true"
                class="MuiPrivateNotchedOutline-root-53 MuiOutlinedInput-notchedOutline-30"
                style="padding-left: 8px;"
              >
                <legend
                  class="MuiPrivateNotchedOutline-legend-54"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
              <input
                aria-invalid="false"
                class="MuiInputBase-input-46 MuiOutlinedInput-input-31"
                id="newRunPipelineParam0"
                type="text"
                value="testVal"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="header"
      >
        Run parameters
      </div>
      <div>
        Specify parameters required by the pipeline
      </div>
      <div>
        <div
          class="MuiFormControl-root-1 textField textfield"
        >
          <label
            class="MuiFormLabel-root-16 MuiFormLabel-filled-20 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13 MuiInputLabel-shrink-12 MuiInputLabel-outlined-15"
            data-shrink="true"
            for="newRunPipelineParam0"
          >
            testParam
          </label>
          <div
            class="MuiInputBase-root-36 MuiOutlinedInput-root-23 MuiInputBase-formControl-37"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-53 MuiOutlinedInput-notchedOutline-30"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-54"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-46 MuiOutlinedInput-input-31"
              id="newRunPipelineParam0"
              type="text"
              value="testVal"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
